// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scrollSnapPaddingInline renders 0 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-padding-inline: 0;
  -moz-scroll-snap-padding-inline: 0;
  -ms-scroll-snap-padding-inline: 0;
  scroll-snap-padding-inline: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-inline: 0;
  -moz-scroll-snap-padding-inline: 0;
  -ms-scroll-snap-padding-inline: 0;
  scroll-snap-padding-inline: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-inline: 0;
  -moz-scroll-snap-padding-inline: 0;
  -ms-scroll-snap-padding-inline: 0;
  scroll-snap-padding-inline: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-inline: 0;
  -moz-scroll-snap-padding-inline: 0;
  -ms-scroll-snap-padding-inline: 0;
  scroll-snap-padding-inline: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapPaddingInline renders function 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-padding-inline: hasnot;
  -moz-scroll-snap-padding-inline: hasnot;
  -ms-scroll-snap-padding-inline: hasnot;
  scroll-snap-padding-inline: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-inline: has;
  -moz-scroll-snap-padding-inline: has;
  -ms-scroll-snap-padding-inline: has;
  scroll-snap-padding-inline: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-inline: hasnot;
  -moz-scroll-snap-padding-inline: hasnot;
  -ms-scroll-snap-padding-inline: hasnot;
  scroll-snap-padding-inline: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-inline: has;
  -moz-scroll-snap-padding-inline: has;
  -ms-scroll-snap-padding-inline: has;
  scroll-snap-padding-inline: has;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapPaddingInline renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-padding-inline: invalid.path.1;
  -moz-scroll-snap-padding-inline: invalid.path.1;
  -ms-scroll-snap-padding-inline: invalid.path.1;
  scroll-snap-padding-inline: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-inline: invalid.path.1;
  -moz-scroll-snap-padding-inline: invalid.path.1;
  -ms-scroll-snap-padding-inline: invalid.path.1;
  scroll-snap-padding-inline: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-inline: invalid.path.1;
  -moz-scroll-snap-padding-inline: invalid.path.1;
  -ms-scroll-snap-padding-inline: invalid.path.1;
  scroll-snap-padding-inline: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-inline: invalid.path.1;
  -moz-scroll-snap-padding-inline: invalid.path.1;
  -ms-scroll-snap-padding-inline: invalid.path.1;
  scroll-snap-padding-inline: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapPaddingInline renders negative number 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-padding-inline: -54881;
  -moz-scroll-snap-padding-inline: -54881;
  -ms-scroll-snap-padding-inline: -54881;
  scroll-snap-padding-inline: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-inline: -54881;
  -moz-scroll-snap-padding-inline: -54881;
  -ms-scroll-snap-padding-inline: -54881;
  scroll-snap-padding-inline: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-inline: -42365;
  -moz-scroll-snap-padding-inline: -42365;
  -ms-scroll-snap-padding-inline: -42365;
  scroll-snap-padding-inline: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-inline: -42365;
  -moz-scroll-snap-padding-inline: -42365;
  -ms-scroll-snap-padding-inline: -42365;
  scroll-snap-padding-inline: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapPaddingInline renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-inline: July;
    -moz-scroll-snap-padding-inline: July;
    -ms-scroll-snap-padding-inline: July;
    scroll-snap-padding-inline: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-inline: August;
    -moz-scroll-snap-padding-inline: August;
    -ms-scroll-snap-padding-inline: August;
    scroll-snap-padding-inline: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-inline: September;
    -moz-scroll-snap-padding-inline: September;
    -ms-scroll-snap-padding-inline: September;
    scroll-snap-padding-inline: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-snap-padding-inline: November;
    -moz-scroll-snap-padding-inline: November;
    -ms-scroll-snap-padding-inline: November;
    scroll-snap-padding-inline: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-inline: July;
    -moz-scroll-snap-padding-inline: July;
    -ms-scroll-snap-padding-inline: July;
    scroll-snap-padding-inline: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-inline: August;
    -moz-scroll-snap-padding-inline: August;
    -ms-scroll-snap-padding-inline: August;
    scroll-snap-padding-inline: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-inline: September;
    -moz-scroll-snap-padding-inline: September;
    -ms-scroll-snap-padding-inline: September;
    scroll-snap-padding-inline: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-snap-padding-inline: November;
    -moz-scroll-snap-padding-inline: November;
    -ms-scroll-snap-padding-inline: November;
    scroll-snap-padding-inline: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-inline: May;
    -moz-scroll-snap-padding-inline: May;
    -ms-scroll-snap-padding-inline: May;
    scroll-snap-padding-inline: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-inline: June;
    -moz-scroll-snap-padding-inline: June;
    -ms-scroll-snap-padding-inline: June;
    scroll-snap-padding-inline: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-inline: April;
    -moz-scroll-snap-padding-inline: April;
    -ms-scroll-snap-padding-inline: April;
    scroll-snap-padding-inline: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-snap-padding-inline: November;
    -moz-scroll-snap-padding-inline: November;
    -ms-scroll-snap-padding-inline: November;
    scroll-snap-padding-inline: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-inline: May;
    -moz-scroll-snap-padding-inline: May;
    -ms-scroll-snap-padding-inline: May;
    scroll-snap-padding-inline: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-inline: June;
    -moz-scroll-snap-padding-inline: June;
    -ms-scroll-snap-padding-inline: June;
    scroll-snap-padding-inline: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-inline: April;
    -moz-scroll-snap-padding-inline: April;
    -ms-scroll-snap-padding-inline: April;
    scroll-snap-padding-inline: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-snap-padding-inline: November;
    -moz-scroll-snap-padding-inline: November;
    -ms-scroll-snap-padding-inline: November;
    scroll-snap-padding-inline: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapPaddingInline renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    -webkit-scroll-snap-padding-inline: July;
    -moz-scroll-snap-padding-inline: July;
    -ms-scroll-snap-padding-inline: July;
    scroll-snap-padding-inline: July;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-padding-inline: August;
    -moz-scroll-snap-padding-inline: August;
    -ms-scroll-snap-padding-inline: August;
    scroll-snap-padding-inline: August;
  }
}

@media January {
  .c0 {
    -webkit-scroll-snap-padding-inline: September;
    -moz-scroll-snap-padding-inline: September;
    -ms-scroll-snap-padding-inline: September;
    scroll-snap-padding-inline: September;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-padding-inline: November;
    -moz-scroll-snap-padding-inline: November;
    -ms-scroll-snap-padding-inline: November;
    scroll-snap-padding-inline: November;
  }
}

@media June {
  .c0 {
    -webkit-scroll-snap-padding-inline: August;
    -moz-scroll-snap-padding-inline: August;
    -ms-scroll-snap-padding-inline: August;
    scroll-snap-padding-inline: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-scroll-snap-padding-inline: July;
    -moz-scroll-snap-padding-inline: July;
    -ms-scroll-snap-padding-inline: July;
    scroll-snap-padding-inline: July;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-padding-inline: August;
    -moz-scroll-snap-padding-inline: August;
    -ms-scroll-snap-padding-inline: August;
    scroll-snap-padding-inline: August;
  }
}

@media January {
  .c0 {
    -webkit-scroll-snap-padding-inline: September;
    -moz-scroll-snap-padding-inline: September;
    -ms-scroll-snap-padding-inline: September;
    scroll-snap-padding-inline: September;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-padding-inline: November;
    -moz-scroll-snap-padding-inline: November;
    -ms-scroll-snap-padding-inline: November;
    scroll-snap-padding-inline: November;
  }
}

@media June {
  .c0 {
    -webkit-scroll-snap-padding-inline: August;
    -moz-scroll-snap-padding-inline: August;
    -ms-scroll-snap-padding-inline: August;
    scroll-snap-padding-inline: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-snap-padding-inline: January;
    -moz-scroll-snap-padding-inline: January;
    -ms-scroll-snap-padding-inline: January;
    scroll-snap-padding-inline: January;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-padding-inline: December;
    -moz-scroll-snap-padding-inline: December;
    -ms-scroll-snap-padding-inline: December;
    scroll-snap-padding-inline: December;
  }
}

@media January {
  .c0 {
    -webkit-scroll-snap-padding-inline: April;
    -moz-scroll-snap-padding-inline: April;
    -ms-scroll-snap-padding-inline: April;
    scroll-snap-padding-inline: April;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-padding-inline: May;
    -moz-scroll-snap-padding-inline: May;
    -ms-scroll-snap-padding-inline: May;
    scroll-snap-padding-inline: May;
  }
}

@media June {
  .c0 {
    -webkit-scroll-snap-padding-inline: June;
    -moz-scroll-snap-padding-inline: June;
    -ms-scroll-snap-padding-inline: June;
    scroll-snap-padding-inline: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-snap-padding-inline: January;
    -moz-scroll-snap-padding-inline: January;
    -ms-scroll-snap-padding-inline: January;
    scroll-snap-padding-inline: January;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-padding-inline: December;
    -moz-scroll-snap-padding-inline: December;
    -ms-scroll-snap-padding-inline: December;
    scroll-snap-padding-inline: December;
  }
}

@media January {
  .c0 {
    -webkit-scroll-snap-padding-inline: April;
    -moz-scroll-snap-padding-inline: April;
    -ms-scroll-snap-padding-inline: April;
    scroll-snap-padding-inline: April;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-padding-inline: May;
    -moz-scroll-snap-padding-inline: May;
    -ms-scroll-snap-padding-inline: May;
    scroll-snap-padding-inline: May;
  }
}

@media June {
  .c0 {
    -webkit-scroll-snap-padding-inline: June;
    -moz-scroll-snap-padding-inline: June;
    -ms-scroll-snap-padding-inline: June;
    scroll-snap-padding-inline: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapPaddingInline renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-padding-inline: 54881;
  -moz-scroll-snap-padding-inline: 54881;
  -ms-scroll-snap-padding-inline: 54881;
  scroll-snap-padding-inline: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-inline: 54881;
  -moz-scroll-snap-padding-inline: 54881;
  -ms-scroll-snap-padding-inline: 54881;
  scroll-snap-padding-inline: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-inline: 42365;
  -moz-scroll-snap-padding-inline: 42365;
  -ms-scroll-snap-padding-inline: 42365;
  scroll-snap-padding-inline: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-inline: 42365;
  -moz-scroll-snap-padding-inline: 42365;
  -ms-scroll-snap-padding-inline: 42365;
  scroll-snap-padding-inline: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapPaddingInline renders string 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-padding-inline: July;
  -moz-scroll-snap-padding-inline: July;
  -ms-scroll-snap-padding-inline: July;
  scroll-snap-padding-inline: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-inline: July;
  -moz-scroll-snap-padding-inline: July;
  -ms-scroll-snap-padding-inline: July;
  scroll-snap-padding-inline: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-inline: June;
  -moz-scroll-snap-padding-inline: June;
  -ms-scroll-snap-padding-inline: June;
  scroll-snap-padding-inline: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-inline: June;
  -moz-scroll-snap-padding-inline: June;
  -ms-scroll-snap-padding-inline: June;
  scroll-snap-padding-inline: June;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapPaddingInline renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-padding-inline: DarkSlateBlue;
  -moz-scroll-snap-padding-inline: DarkSlateBlue;
  -ms-scroll-snap-padding-inline: DarkSlateBlue;
  scroll-snap-padding-inline: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-inline: DarkSlateBlue;
  -moz-scroll-snap-padding-inline: DarkSlateBlue;
  -ms-scroll-snap-padding-inline: DarkSlateBlue;
  scroll-snap-padding-inline: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-inline: DarkSlateBlue;
  -moz-scroll-snap-padding-inline: DarkSlateBlue;
  -ms-scroll-snap-padding-inline: DarkSlateBlue;
  scroll-snap-padding-inline: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-inline: DarkSlateBlue;
  -moz-scroll-snap-padding-inline: DarkSlateBlue;
  -ms-scroll-snap-padding-inline: DarkSlateBlue;
  scroll-snap-padding-inline: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
